[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]

[node name="frame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" type="ViewportContainer" parent="."]
margin_right = 288.0
margin_bottom = 416.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="map"]
size = Vector2( 288, 416 )
handle_input_locally = false
msaa = 2
render_target_update_mode = 3

[node name="Map" parent="map/Viewport" instance=ExtResource( 1 )]

[node name="InfoContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -212.0
margin_bottom = 416.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="InfoContainer"]
margin_right = 212.0
margin_bottom = 14.0
text = "Keep going!"
align = 1

[node name="MovesContainer" type="HBoxContainer" parent="InfoContainer"]
margin_top = 18.0
margin_right = 212.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesLabel" type="Label" parent="InfoContainer/MovesContainer"]
margin_right = 46.0
margin_bottom = 14.0
text = "Moves:"
align = 1

[node name="MovesNum" type="Label" parent="InfoContainer/MovesContainer"]
margin_left = 50.0
margin_right = 84.0
margin_bottom = 14.0
text = "None"
align = 1

[node name="NewGame" type="Button" parent="InfoContainer"]
margin_top = 36.0
margin_right = 212.0
margin_bottom = 56.0
text = "New Game"
[connection signal="moves_changed" from="map/Viewport/Map" to="." method="_on_Map_moves_changed"]
[connection signal="pressed" from="InfoContainer/NewGame" to="." method="_on_NewGame_pressed"]
